[gd_scene load_steps=3 format=3 uid="uid://stf0sm0rs72r"]

[ext_resource type="Script" path="res://StartMenu.gd" id="1_7nuov"]
[ext_resource type="Texture2D" uid="uid://b1oftsji72ml0" path="res://Graphics/MySprites/UI/MyPaper.png" id="2_jf7i4"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_7nuov")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00185, 0.992453)
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1366.0
offset_bottom = 775.0
texture = ExtResource("2_jf7i4")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_right = 1364.0
offset_bottom = 767.0

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Creat-A-Level" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Create your own map!"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "Create-A-Level!"

[node name="Player Made" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The last player made level."
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "Player Made"

[node name="City" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Where is the post office?
Some default city maps."
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "City Maps"

[node name="School" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "This is my favourite place.
Some default school maps."
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "School Maps"

[node name="Single Player" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "Single Player"

[node name="Full Screen" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Full Screen mode"

[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/Creat-A-Level" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/Player Made" to="." method="_on_player_made_pressed"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/City" to="." method="_on_city_pressed"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/School" to="." method="_on_school_pressed"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/Single Player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/Full Screen" to="." method="_on_full_screen_pressed"]
